
class Animacion
{
private:
    /*  */
public:
    Animacion(/* args */) {}
    ~Animacion() {}
    void Mostrar() {}
    void Activar() {}
};

