class Avioneta
{
private:
    /* data */
public:
    Avioneta(/* args */) {}
    ~Avioneta() {}
    void Volar() {}
};