class Bomba
{
private:
    /* data */
public:
    Bomba(/* args */) {}
    ~Bomba() {}
    void Explotar() {}
};