class Cagney
{
private:
    /* data */
public:
    Cagney(/* args */) {}
    ~Cagney() {}
    void LanzarEnredadera() {}
    void LanzarSemilla() {}
};
