class Cala
{
private:
    /* data */
public:
    Cala(/* args */) {}
    ~Cala() {}
    void LanzarAnimal() {}
    void LanzarBomba() {}
    void Petrificar() {}
    void CambiarForma() {}
};