class Carta
{
private:
    /* data */
public:
    Carta(/* args */) {}
    ~Carta() {}
    int Acumular() {}
    void ActivarCombo() {}
};