class Hilda
{
private:
    /* data */
public:
    Hilda(/* args */) {}
    ~Hilda() {}
    void LanzarBomba() {}
    void LanzarEstrella() {}
    void CambiarForma() {}
    boolean Reir() {} ////////////////////////// duda???
};