class Mapa
{
private:
    /* data */
public:
    Mapa(/* args */) {}
    ~Mapa() {}
    void CambiarEscenario() {}
};