class MapaCagney
{
private:
    /* data */
public:
    MapaCagney(/* args */) {}
    ~MapaCagney() {}
};