class MapaCala
{
private:
    /* data */
public:
    MapaCala(/* args */) {}
    ~MapaCala() {}
};