class MapaHilda
{
private:
    /* data */
public:
    MapaHilda(/* args */) {}
    ~MapaHilda() {}
};