class Nivel
{
private:
    /* data */
public:
    Nivel(/* args */) {}
    ~Nivel() {}
    int CambiarDificultad() {}
    void CambiarMapa() {}
    void CambiarEscenario() {}
};