class Personaje
{
private:
    /* data */
public:
    Personaje(/* args */) {}
    ~Personaje() {}
    void Mover() {}
    void Atacar() {} //////////////////////// int o boolean?
};