class Puntaje
{
private:
    /* data */
public:
    Puntaje(/* args */) {}
    ~Puntaje() {}
    int Indicar() {}
    int AcumularPuntaje() {}
};