class Sonido
{
private:
    /* data */
public:
    Sonido(/* args */) {}
    ~Sonido() {}
    void Activar() {}
};