#include <string>
class Usuario
{
private:
   // std::string nombreUsuario;
   // std::string personaje;
public:
    Usuario(std::string nombreUsuario)
    {
       // this->nombre = nombre;
       // this->personaje = personaje;
    }
    ~Usuario() {}
    void Controlar() {}
    void Elegir() {}
};