class Villano
{
private:
    /* data */
public:
    Villano(/* args */) {}
    ~Villano() {}
    void Disparar() {} ///////////////////////////////////////// int o boolean? tal vez?
    int ReducirVida() {}
    boolean Vencer() {}
};